layouts: base: Don't use flex in 'body' tag - Add wrap left margin when desktop - window use scroll instead '.content' element scroll - '.side' always fixed position

--- a/css/default.css
+++ b/css/default.css
@@ -1,9 +1,9 @@
 @charset "utf-8";
 
 /* Side */
-.side {z-index:120; background:#FFF; overflow-x:hidden; overflow-y:auto; width:320px;}
+.side {z-index:120; background:#FFF; position:fixed; top:0; bottom:0; overflow-x:hidden; overflow-y:auto; width:320px;}
 .desktop .side {box-shadow:0 0 16px rgba(0,0,0,0.3);}
-.tablet .side, .mobile .side {position:fixed; top:0; bottom:0; transform:translateX(-100%);}
+.tablet .side, .mobile .side {transform:translateX(-100%);}
 .mobile .side {width:100%;}
 .tablet .side.active, .mobile .side.active {box-shadow:0 0 16px rgba(0,0,0,0.3); transform:translateX(0);}
 
@@ -22,6 +22,9 @@
 .side .list .link:hover {background:#EEE;}
 .side .list .title {line-height:24px; font-size:18px;}
 .side .list .icon {margin-right:12px; width:24px; height:24px; vertical-align:middle;}
+
+.wrap {min-height:100%;}
+.desktop .wrap {margin-left:320px;}
 
 /* Content Wrap */
 .desktop .nav .top {transform:translateY(-100%);}
