--- a/css/material.css
+++ b/css/material.css
@@ -76,7 +76,7 @@ pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9em;}
 .header ~ .card {margin:8px 0;} /* outter header */
 .card header {border-radius:2px 2px 0 0; padding:16px; font-size:18pt;} /* inner header */
 
-.nav .top {position:fixed; top:0; left:0; padding:14px; width:100%; height:64px; transiion:box-shadow linear 200ms;}
+.nav .top {z-index:100; position:fixed; top:0; left:0; padding:14px; width:100%; height:64px;}
 .tablet .nav .top.shadow, .mobile .nav .top.shadow {box-shadow:0 0 8px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.24);}
 .nav .top .title {margin-left:14px; line-height:36px; font-size:18pt;}
 
